--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/samhiga/react-portfolio/issues"
   },
-  "homepage": "https://github.com/samhiga/react-portfolio",
+  "homepage": "https://samhiga.github.io/react-portfolio",
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.4",
@@ -29,6 +31,7 @@
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
+    "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-pdf": "^7.0.1",
