--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://samhiga.github.io/react-portfolio",
   "dependencies": {
+    "@formspree/react": "^2.4.4",
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
